--- a/MPfm.OSX/Windows/XIB/CloudConnectWindow.xib
+++ b/MPfm.OSX/Windows/XIB/CloudConnectWindow.xib
@@ -14,7 +14,7 @@
                 <outlet property="lblStep3" destination="RF7-9i-gpy" id="xXh-UO-8AG"/>
                 <outlet property="lblStep4" destination="psO-OZ-4Of" id="Mjt-G6-yEx"/>
                 <outlet property="lblTitle" destination="6OU-CQ-cec" id="Z6X-Dg-1vr"/>
-                <outlet property="progressIndicator" destination="R2n-4M-YLV" id="VQM-G7-iXA"/>
+                <outlet property="progressBar" destination="VVM-tF-Qj9" id="lrQ-Fg-Czq"/>
                 <outlet property="window" destination="2" id="6"/>
             </connections>
         </customObject>
@@ -29,10 +29,6 @@
                 <rect key="frame" x="0.0" y="0.0" width="506" height="271"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <progressIndicator maxValue="100" indeterminate="YES" style="bar" id="R2n-4M-YLV">
-                        <rect key="frame" x="20" y="208" width="466" height="20"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                    </progressIndicator>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="5i1-HO-ewu">
                         <rect key="frame" x="18" y="177" width="495" height="17"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
@@ -108,6 +104,10 @@
                                 </textFieldCell>
                             </textField>
                         </subviews>
+                    </customView>
+                    <customView id="VVM-tF-Qj9" customClass="MPfmProgressBarView">
+                        <rect key="frame" x="20" y="204" width="466" height="22"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     </customView>
                 </subviews>
             </view>
