--- a/MPfm.OSX/Windows/XIB/SyncWindow.xib
+++ b/MPfm.OSX/Windows/XIB/SyncWindow.xib
@@ -280,7 +280,7 @@
                             <font key="font" size="12" name="HelveticaNeue"/>
                         </buttonCell>
                     </button>
-                    <textField verticalHuggingPriority="750" id="iuc-s0-rxH">
+                    <textField verticalHuggingPriority="750" id="iuc-s0-rxH" customClass="MPfmTextField">
                         <rect key="frame" x="9" y="34" width="420" height="26"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" placeholderString="localhost" drawsBackground="YES" id="mTN-0j-zjW">
@@ -289,7 +289,7 @@
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <textField verticalHuggingPriority="750" id="RV1-Kw-uWd">
+                    <textField verticalHuggingPriority="750" id="RV1-Kw-uWd" customClass="MPfmTextField">
                         <rect key="frame" x="437" y="34" width="68" height="26"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" placeholderString="53551" drawsBackground="YES" id="U8G-Zj-LQa">
