WPF: Added contextual menu and auto scrolling to WaveFormScrollView.

--- a/MPfm.WPF/Classes/Windows/MainWindow.xaml
+++ b/MPfm.WPF/Classes/Windows/MainWindow.xaml
@@ -462,15 +462,7 @@
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition />
                             </Grid.RowDefinitions>
-                            <controls:WaveFormScrollView Grid.Row="0" x:Name="scrollViewWaveForm" MouseRightButtonUp="ScrollViewWaveForm_OnMouseRightButtonUp">
-                                <Panel.ContextMenu>
-                                    <ContextMenu x:Name="contextMenuWaveForm" Visibility="Collapsed">
-                                        <MenuItem x:Name="menuItemZoomIn" Header="Zoom in" Click="MenuItemZoomIn_OnClick" />
-                                        <MenuItem x:Name="menuItemZoomOut" Header="Zoom out" Click="MenuItemZoomOut_OnClick" />
-                                        <MenuItem x:Name="menuItemCreateMarker" Header="Create marker here" Click="MenuItemCreateMarker_OnClick" />
-                                    </ContextMenu>
-                                </Panel.ContextMenu>
-                            </controls:WaveFormScrollView>
+                            <controls:WaveFormScrollView Grid.Row="0" x:Name="scrollViewWaveForm" MouseRightButtonUp="ScrollViewWaveForm_OnMouseRightButtonUp" />
                             <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Background="{DynamicResource BrushBackgroundColor}" ShowsPreview="True" Height="1" />
                             <Grid Grid.Row="2">
                                 <Grid.ColumnDefinitions>
