WPF: Added Marker Details panel.
- Added Marker Details panel to MainWindow, similar to what has been
done in OSX. Fully functional, but still needs a little layout
adjustment.

--- a/MPfm.WPF/Classes/App.xaml
+++ b/MPfm.WPF/Classes/App.xaml
@@ -494,7 +494,7 @@
                     <Setter Property="Background" Value="White"/>
                 </Trigger>
                 <Trigger Property="IsSelected" Value="True">
-                    <Setter Property="Background" Value="White"/>
+                    <Setter Property="Background" Value="LightGray"/>
                 </Trigger>
             </Style.Triggers>
             <!--<Setter Property="Template">
